fix color contrast on footer

--- a/style.css
+++ b/style.css
@@ -654,6 +654,10 @@ a {
     color: #575757!important;
 }
 
+.tc-black {
+    color: #000!important;
+}
+
 .container {
     max-width: 1000px;
 }
